give facets counts +1px of room so value wrapping happens correctly

--- a/app/assets/stylesheets/blacklight/_facets.css.scss
+++ b/app/assets/stylesheets/blacklight/_facets.css.scss
@@ -34,7 +34,7 @@
 
 .facet-values li {
   padding-bottom: 0.3em; 
-  padding-right: 50px;
+  padding-right: 51px;
 
   text-indent: -20px;
   padding-left: 20px;
